
[16. Drop the title column. Not sure why that was in there]
ALTER TABLE users DROP COLUMN title;

[17. Added updated_at column so we know when the user was last updated]
ALTER TABLE users ADD COLUMN updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP;



------------ Students_Courses table ------------

[13. Add id column]
ALTER TABLE `students_courses` ADD COLUMN `id` INT PRIMARY KEY NOT NULL AUTO_INCREMENT FIRST;

[14ish. Rename column student_id to user_id] ** this has not been truly added yet
ALTER TABLE `reou`.`students_courses` 
CHANGE COLUMN `student_id` `user_id` INT(11) NOT NULL COMMENT '' ;



------------------------- course_category Table --------------------

[ 14. add column image_filename ] 
 ALTER TABLE `course_category` ADD COLUMN `image_filename` VARCHAR(255) NULL;




------------------------- courses table --------------------

18. ALTER TABLE `reou`.`courses` 
ADD COLUMN `course_cost` INT NULL

19. ALTER TABLE `reou`.`courses` 
CHANGE COLUMN `max_students` `max_class_size` VARCHAR(50) NULL DEFAULT NULL ;

20. ALTER TABLE `reou`.`courses` 
ADD COLUMN `course_hours` VARCHAR(45) NULL AFTER `course_desc`;

21. ALTER TABLE `reou`.`courses` 
ADD COLUMN `course_duration` VARCHAR(50) NULL AFTER `course_cost_evening`;


------------------------- course_schedules table --------------------


[ 22. add column days_availble ] 
ALTER TABLE `course_schedules` ADD `days_available` TEXT NOT NULL AFTER `class_end_time`;


[ 23. add column class_begin_date ]
ALTER TABLE `course_schedules` ADD `class_begin_date` DATE NOT NULL;


[ 24. add column class_end_date ]
ALTER TABLE `course_schedules` ADD `class_end_date` DATE NOT NULL AFTER `class_begin_date`;





















Other Notes
-------------------------------
Getting image uploading to work.

1. In terminal do ps aux | grep httpd
2. First column show who owns the process (apache)
3. Go to image upload folder.
4. Type Comment chown -R apache path/to/folder