@@ -128,6 +128,12 @@ ALTER TABLE `course_schedules` ADD `class_begin_date` DATE NOT NULL;
 ALTER TABLE `course_schedules` ADD `class_end_date` DATE NOT NULL AFTER `class_begin_date`;
 
 
+-------------------------- email_confirm table -----------------------------------
+
+
+[ 25. Create email_confirm table ]
+
+CREATE TABLE `reou`.`email_confirm` ( `id` INT NOT NULL AUTO_INCREMENT , `userid` INT NOT NULL COMMENT 'foreign key userid' , `token` VARCHAR(255) NOT NULL , `type` VARCHAR(10) NOT NULL COMMENT 'pass or email' , `expire_time` TIMESTAMP NOT NULL , PRIMARY KEY (`id`)) ENGINE = InnoDB;
 
 
 
